admission/ValidatingAdmissionPolicy/policies/hostpath-volumes/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hostpath-volumes-pod
  annotations:
    kubeapt.io/uuid: "5612ded8-9174-42bf-80de-52468a236655"
spec:
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
    volumeMounts:
    - name: host
      mountPath: /data
  volumes:
  - name: host
    hostPath:
      path: /var/lib
      type: Directory
